examples/test/testpolicy326.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy326
  namespace: namespace112
spec:
  podSelector:
    matchLabels:
      key31: value44
      key37: value28
      key5: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value16
      podSelector:
        matchLabels:
          key21: value11
